rename api gateway access logs
